# wowplug

./: .gitignore  README.md  setup.cfg  setup.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
wowplug/: config.py  main.py  omap_yaml.py  provider.py  qt_web.py  scan.py  sync.py  terminalsize.py  utils.py  yaml.py
