[bdist_wheel]
universal=1

[metadata]
package_name = wowplug
description = An addon manager for World of Warcraft
description-file=README.md
author = Jerry Ma
author_email = jerry.ma.nk@gmail.com,
license = BSD
url = https://github.com/Jerry-Ma/wowplug
install_requires = docopt, schema, appdirs, pyyaml, requests, fuzzywuzzy[speedup], beautifulsoup4, tabulate, dirsync

[entry_points]
wowplug = wowplug.main:cli
